Restructure folders for more readability
