# API_Documentation.yaml
@@ -114,6 +114,7 @@ paths:
     
   /Devices/register:
     post:
+      description: Register a new device
       tags:
       - Devices
       requestBody:
@@ -427,16 +428,16 @@ paths:
             schema:
               type: object
               properties:
-                EmployeeId:
+                Email:
                   type: string
-                  example: "123456789"
+                  example: "demo_account_user199087+1@tanda.co"
                 Password:
                   type: string
                   example: "This should be a Password"
                 
               required:
                 - Password
-                - EmployeeId
+                - Email
       responses:
         '201':
           description: User added successfully
@@ -482,16 +483,16 @@ paths:
             schema:
               type: object
               properties:
-                EmployeeId:
+                Email:
                   type: string
-                  example: "123456789"
+                  example: "demo_account_user199087+1@tanda.co"
                 Password:
                   type: string
                   example: "This should be a Password"
                 
               required:
                 - Password
-                - EmployeeId
+                - Email
       responses:
         '201':
           description: User logged in successfully
@@ -519,11 +520,11 @@ paths:
             schema:
               type: object
               properties:
-                EmployeeId:
+                Email:
                   type: string
-                  example: "123456789"
+                  example: "demo_account_user199087+1@tanda.co"
               required:
-                - EmployeeId
+                - Email
       responses:
         '200':
           description: User exists
@@ -596,9 +597,9 @@ paths:
             schema:
               type: object
               properties:
-                EmployeeId:
+                Email:
                   type: string
-                  example: "123456789"
+                  example: "demo_account_user199087+1@tanda.co"
                 Password:
                   type: string
                   example: "This should be a Password"
@@ -607,7 +608,7 @@ paths:
                   example: "This should be a Password"
               required:
                 - Password
-                - EmployeeId
+                - Email
                 - NewPassword
       responses:
         '201':
@@ -1697,7 +1698,9 @@ paths:
           $ref: '#/components/responses/NotFoundError'
         '500':
           $ref: '#/components/responses/InternalServerError'
-
+      security:
+        - bearerAuth: []
+        
   /outfits/delete/{_id}:
     delete:
       summary: Delete an Outfit
@@ -1758,9 +1761,9 @@ components:
         _id:
           type: string
           example: "123123123123 (Id generated by MongoDB)"
-        EmployeeId:
+        Email:
           type: string
-          example: "123456789"
+          example: "demo_account_user199087+1@tanda.co"
         Password:
           type: string
           example: "abcdxyzetc"
